--- a/public/css/style.css
+++ b/public/css/style.css
@@ -14120,8 +14120,8 @@ Sidebar
   position: absolute;
   bottom: 0;
   left: -14px;
-  /* background-color: #ffdd15; */
-  background-color: var(--bg-theme-color1);
+  background-color: #ffdd15;
+  /* background-color: var(--bg-theme-color1); */
   border-radius: 30px 90px 20px 30px;
   transform: skew(346deg);
   height: 59%;
