--- a/public/css/style.css
+++ b/public/css/style.css
@@ -14102,8 +14102,8 @@ Sidebar
 @media only screen and (max-width: 768px) {
   /* Appliquer le style spécifique pour mobile */
   .fsb1 {
-      margin-top: 146px;
-      padding-top: 9px;
+      margin-top: 130px;
+      /* padding-top: 9px; */
       /* Ajoutez d'autres styles spécifiques pour mobile ici si nécessaire */
   }
 }
