--- a/public/css/style.css
+++ b/public/css/style.css
@@ -14101,11 +14101,9 @@ Sidebar
 /* Media query pour les appareils mobiles */
 @media only screen and (max-width: 768px) {
   /* Appliquer le style spécifique pour mobile */
-  .fsb1 {
-      margin-top: 130px;
-      /* padding-top: 9px; */
-      /* Ajoutez d'autres styles spécifiques pour mobile ici si nécessaire */
-  }
+  /* .fsb1 {
+      margin-top: -13px;
+  } */
 }
 
 
